# Docx-Text-Highlighter

./: README.md  output.docx  pyproject.toml
.github/workflows/: python-publish.yml
DocxFiles/: Python Docs Text.docx
src/text_highlighter_package_mq/: text_highlighter.py
texthighlighter/: __init__.py
