[build-system]
requires = ["uv_build >= 0.7.19, <0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "src"

[project]
name = "docxtexthighlighter"
version = "0.0.2"
authors = [
  { name="mq", email="mq@example.com" },
]
description = "A package that helps to highlight words in your docx files."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "lxml==6.0.0",
    "python-docx==1.2.0",
    "setuptools==80.9.0",
    "twine>=6.1.0",
    "typing-extensions==4.14.1",
    "wheel==0.45.1",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/Weeerocks/Text-Highlighter"
Issues = "https://github.com/Weeerocks/Text-Highlighter/issues"
