[build-system]
requires = ["uv_build >= 0.7.19, <0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "src"

[project]
name = "docxtexthighlighter"
version = "0.0.11"
authors = [
  { name="mq", email="mq@example.com" },
]
description = "A package that helps to highlight words in your docx files."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Operating System :: OS Independent",
]
dependencies = [
  "python-docx"
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/Weeerocks/Text-Highlighter"
Issues = "https://github.com/Weeerocks/Text-Highlighter/issues"
